# cric

./: manage.py  processing_data.py  pyproject.toml
a_game/: .env  README.md
a_game/a_game/: settings.py  urls.py  wsgi.py
a_game/game/: admin.py  enhanced_match_engine.py  models.py  rating_system.py
a_game/game/migrations/: 0001_initial.py  0003_innings_tournament_match_match_type_match_overs_and_more.py
cricket-auction-frontend/: Chart.js  README.md  angular.json  package-lock.json  package.json  tsconfig.json
cricket-auction-frontend/src/: index.html  styles.scss
cricket-auction-frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts  app.spec.ts
cricket-auction-frontend/src/app/core/models/: index.ts
cricket-auction-frontend/src/app/core/services/: api.service.ts  auction.service.ts  index.ts  match.service.ts  player.service.ts  team.service.ts  tournament.service.ts
cricket-auction-frontend/src/app/features/auctions/: auctions.routes.ts
cricket-auction-frontend/src/app/features/dashboard/: dashboard.component.ts
cricket-auction-frontend/src/app/features/leaderboard/: leaderboard.component.ts
cricket-auction-frontend/src/app/features/matches/: matches.routes.ts
cricket-auction-frontend/src/app/features/players/: players.routes.ts
cricket-auction-frontend/src/environments/: environment.prod.ts  environment.ts
game/: match_engine.py  serializers.py  urls.py  views.py
game/management/commands/: create_sample_data.py
game/migrations/: 0002_remove_bid_unique_bid_per_auction_player_team_amount_and_more.py
(+42 files in other folders)
