[tool.poetry]
name = "cric"
version = "0.1.0"
description = "Cricket Stats Analysis"
authors = ["Divyanshu Siwach <yanshucodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
