[tool.poetry]
name = "a-game"
version = "0.1.0"
packages = [
    { include = "a_game" }
]
description = ""
authors = ["Divyanshu Siwach <yanshucodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.7"
psycopg2-binary = "2.9.7"
python-decouple = "3.8"
djangorestframework = "3.14.0"
django-cors-headers = "4.3.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
